@@ -1,7 +1,7 @@
           Release Notes for NEdit Version 5.5, October 2004
 
 
-$Id: ReleaseNotes,v 1.35 2006/02/11 10:37:28 yooden Exp $
+$Id: ReleaseNotes,v 1.36 2006/03/17 14:20:34 edg Exp $
 
 This file contains last minute notes to users about the release, which are not
 included in the documentation or README files included with the distribution
@@ -37,6 +37,9 @@ Bugs fixed in $NEXT_VERSION
   - If a macro file contains function definitions mixed with code segments
     the code segments were excuted in the wrong order in certain cases. This
     is fixed (SF bug #622291).
+
+  - The current file name is (again) displayed in the Save As dialog text
+    field. (SF bug #1451337)
 
 
 New features in 5.5 
